# physdes-cpp

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  AGENTS.md  CMakeLists.txt  GEMINI.md  IFLOW.md  README.md  README_8md.html  _r_e_a_d_m_e_8md.html  about.html  about_8dox.html  annotated.html  classDllink-members.html  classDllink.html  classDllink__coll__graph.map  classDllink__coll__graph.md5  classRDllIterator-members.html  classRDllIterator.html  classRDllist-members.html  classRDllist.html  classes.html  classilds_1_1Halton-members.html  classilds_1_1Halton.html  classilds_1_1VdCorput-members.html  classilds_1_1VdCorput.html  classrecti_1_1ClockTreeVisualizer-members.html  classrecti_1_1ClockTreeVisualizer.html  classrecti_1_1DMEAlgorithm-members.html  classrecti_1_1DMEAlgorithm.html  classrecti_1_1DelayCalculator-members.html  classrecti_1_1DelayCalculator.html  classrecti_1_1DelayCalculator__inherit__graph.map  classrecti_1_1DelayCalculator__inherit__graph.md5  classrecti_1_1ElmoreDelayCalculator-members.html  classrecti_1_1ElmoreDelayCalculator.html  classrecti_1_1ElmoreDelayCalculator__coll__graph.map  classrecti_1_1ElmoreDelayCalculator__coll__graph.md5  classrecti_1_1GlobalRouter-members.html  classrecti_1_1GlobalRouter.html  (+360 more)
.github/workflows/: documentation.yaml  install.yml  macos.yml  standalone.bak  standalone.yml  style.bak  style.yml  test.yml  ubuntu.yml  windows.yml
.trunk/: actions  logs  notifications  trunk.yaml
all/: CMakeLists.txt
bench/: CMakeLists.txt  bench_main.cpp
cmake/: specific.cmake  specific.cmake.good
documentation/: CMakeLists.txt  Doxyfile  conf.py
documentation/pages/: about.dox
experiments/: steiner_forest_grid.cpp
include/lds/: ilds.hpp
include/recti/: dllink.hpp  dme_algorithm.hpp  fractions.hpp  generic.hpp  global_router.hpp  greeter.h  halton_int.hpp  interval.hpp  logger.hpp  manhattan_arc.hpp  merge_obj.hpp  point.hpp  polygon.hpp  rdllist.cpp  rdllist.hpp  recti.hpp  rpolygon.hpp  rpolygon_cut.hpp  rpolygon_hull.hpp  test_recti.cpp  to_polygon.hpp  vector2.hpp  version.h  visualize_clock_tree.hpp
include/recti/detail/: svg_utils.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  defines_0.js  (+56 more)
source/: dme_algorithm.cpp  global_router.cpp  greeter.cpp  logger.cpp  polygon.cpp  recti.cpp  rpolygon.cpp  rpolygon_cut.cpp  rpolygon_hull.cpp  visualize_clock_tree.cpp
standalone/: CMakeLists.txt
standalone/source/: demo_overlap.cpp  main.cpp
test/: CMakeLists.txt
test/source/: TestGlobalRouter.h  greeter.cpp  greeter.old  test_clk_tree_vis.cpp  test_clk_tree_vis_random.cpp  test_dme_algorithm.cpp  test_dme_algorithm.tpp  test_dme_algorithm_stress.cpp  test_frac.cpp  test_generic.cpp  test_global_router.cpp  test_global_router3d.cpp  test_global_router3d_with_keepouts.cpp  test_global_router_stress.cpp  test_global_router_with_keepouts.cpp  test_halton_int.cpp  test_halton_int2.cpp  test_interval.cpp  test_merge.cpp  test_point.cpp  test_polygon.cpp  test_polygon2.cpp  test_rapidcheck.cpp  test_rapidcheck.tpp  test_rdllist.cpp  test_recti.cpp  test_recti3d.cpp  test_rpolygon.cpp  test_rpolygon2.cpp  test_rpolygon_cut.cpp  test_rpolygon_hull.cpp  test_rpolygon_hull.tpp  test_rpolygon_stress.cpp  test_to_polygon.cpp  test_vector2.cpp
test_installed/: CMakeLists.txt
